--- a/index.html
+++ b/index.html
@@ -2,4 +2,30 @@
 layout: base
 ---
 
-<h1>Collaborative PL-Science</h1>
+<div class="cover">
+  <div class="wrapper">
+    <div class="pure-g">
+        <div class="pure-u-15-24">
+          <h1>Perform Collaborative Scientific Experiments</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="pure-u-9-24">
+          <h3 style="margin: 0">Sign up for Collaborative PL-Science</h3>
+          <form class="pure-form">
+              <fieldset class="pure-group">
+                <input type="text" class="pure-input-1" placeholder="Username">
+                <input type="text" class="pure-input-1" placeholder="Password">
+                <input type="email" class="pure-input-1" placeholder="Email">
+              </fieldset>
+              <button type="submit" class="pure-button pure-input-1 pure-button-primary">Sign up</button>
+          </form>
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="features">
+</div>
