changing cover background

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@ layout: base
 
 <div class="cover">
   <div class="wrapper">
+    <header>
+      <button class="pure-button pure-button-primary" style="float: right" id="signin">Sign in</button>
+      <h1>Collaborative PL-Science</h1>
+    </header>
     <div class="pure-g">
         <div class="pure-u-15-24">
-          <h1>Perform Collaborative Scientific Experiments</h1>
+          <h2>Perform Collaborative Scientific Experiments</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
         <div class="pure-u-9-24">
-          <h3 style="margin: 0">Sign up for Collaborative PL-Science</h3>
+          <h3>Sign up for Collaborative PL-Science</h3>
           <form class="pure-form">
               <fieldset class="pure-group">
                 <input type="text" class="pure-input-1" placeholder="Username">
@@ -26,6 +30,5 @@ layout: base
     </div>
   </div>
 </div>
-
 <div class="features">
 </div>
