--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@ layout: base
 <div class="cover">
   <div class="wrapper">
     <header>
-      <button class="pure-button pure-button-primary" style="float: right" id="signin">Sign in</button>
+      <button class="pure-button pure-button-primary" id="signin">Sign in</button>
       <h1>Collaborative PL-Science</h1>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Research Group</a></li>
+        <li><a href="">Papers</a></li>
+        <li><a href="">More</a></li>
+      </ul>
     </header>
     <div class="pure-g">
         <div class="pure-u-15-24">
           <h2>Perform Collaborative Scientific Experiments</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          <p>Enhanced collaboration with a rich scientific software ecosystem. Investigate your research problem. Prototype and execute your experiment. Publish all relevant results.</p>
         </div>
         <div class="pure-u-9-24">
           <h3>Sign up for Collaborative PL-Science</h3>
