--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
     <div class="pure-g">
         <div class="pure-u-15-24">
           <h2>Perform Collaborative Scientific Experiments</h2>
-          <p>Enhanced collaboration with a rich scientific software ecosystem. Investigate your research problem. Prototype and execute your experiment. Publish all relevant results.</p>
+          <p>Investigate your research problem. Prototype and execute your experiment. Publish all relevant results.</p>
         </div>
         <div class="pure-u-9-24">
           <h3>Sign up for Collaborative PL-Science</h3>
@@ -35,4 +35,19 @@ layout: base
   </div>
 </div>
 <div class="features">
+  <section>
+    <div class="wrapper">
+      <h2>Scientific Software Ecosystem</h2>
+    </div>
+  </section>
+  <section>
+    <div class="wrapper">
+      <h2>Enhanced Collaboration</h2>
+    </div>
+  </section>
+  <section>
+    <div class="wrapper">
+      <h2>Scientific Software Product Line</h2>
+    </div>
+  </section>
 </div>
