add colaborators page

--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@ layout: base
 
 <div class="cover">
   <div class="wrapper">
-    <header>
-      <button class="pure-button pure-button-primary" id="signin">Sign in</button>
-      <h1>Collaborative PL-Science</h1>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Features</a></li>
-        <li><a href="">Research Group</a></li>
-        <li><a href="">Papers</a></li>
-        <li><a href="">More</a></li>
-      </ul>
-    </header>
+    {% include header.html %}
     <div class="pure-g">
         <div class="pure-u-15-24">
           <h2>Perform Collaborative Scientific Experiments</h2>
@@ -25,7 +15,7 @@ layout: base
           <form class="pure-form">
               <fieldset class="pure-group">
                 <input type="text" class="pure-input-1" placeholder="Username">
-                <input type="text" class="pure-input-1" placeholder="Password">
+                <input type="password" class="pure-input-1" placeholder="Password">
                 <input type="email" class="pure-input-1" placeholder="Email">
               </fieldset>
               <button type="submit" class="pure-button pure-input-1 pure-button-primary">Sign up</button>
