--- a/research-group/index.html
+++ b/research-group/index.html
@@ -10,7 +10,7 @@ layout: page
   <ul class="researchers">
     <li>
       <div class="portrait">
-        <img src="/images/research-group/fernanda.png">
+        <img src="{{ site.baseurl }}images/research-group/fernanda.png">
       </div>
       <div class="contact-card">
         <h3>Fernanda Campos <small>Campos, F. C. A.</small></h3>
@@ -19,7 +19,7 @@ layout: page
     </li>
     <li>
       <div class="portrait">
-        <img src="/images/research-group/regina.png">
+        <img src="{{ site.baseurl }}images/research-group/regina.png">
       </div>
       <div class="contact-card">
         <h3>Regina Braga <small>Braga, R.</small></h3>
@@ -28,7 +28,7 @@ layout: page
     </li>
     <li>
       <div class="portrait">
-        <img src="/images/research-group/josemaria.png">
+        <img src="{{ site.baseurl }}images/research-group/josemaria.png">
       </div>
       <div class="contact-card">
         <h3>José Maria N. David <small>David, J. M. N.</small></h3>
@@ -41,7 +41,7 @@ layout: page
   <ul class="researchers">
     <li>
       <div class="portrait">
-        <img src="/images/research-group/gabriella.png">
+        <img src="{{ site.baseurl }}images/research-group/gabriella.png">
       </div>
       <div class="contact-card">
         <h3>Gabriella C. B. Costa <small>Costa, G. C. B.</small></h3>
@@ -50,7 +50,7 @@ layout: page
     </li>
     <li>
       <div class="portrait">
-        <img src="/images/research-group/anrafel.png">
+        <img src="{{ site.baseurl }}images/research-group/anrafel.png">
       </div>
       <div class="contact-card">
         <h3>Anrafel F. Pereira <small>Pereira, A. F.</small></h3>
@@ -63,7 +63,7 @@ layout: page
   <ul class="researchers">
     <li>
       <div class="portrait">
-        <img src="/images/research-group/vitor.jpeg">
+        <img src="{{ site.baseurl }}images/research-group/vitor.jpeg">
       </div>
       <div class="contact-card">
         <h3>Vitor Freitas <small>Freitas, V.</small></h3>
@@ -72,7 +72,7 @@ layout: page
     </li>
     <li>
       <div class="portrait">
-        <img src="/images/research-group/francila.jpg">
+        <img src="{{ site.baseurl }}images/research-group/francila.jpg">
       </div>
       <div class="contact-card">
         <h3>Frâncila Weidt Neiva <small>Neiva, W. F.</small></h3>
