--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: base
           <p>Investigate your research problem. Prototype and execute your experiment. Publish all relevant results.</p>
         </div>
         <div class="pure-u-9-24">
-          <h3>Sign up for Collaborative PL-Science</h3>
+          <h3>Sign up for ECOS PL-Science</h3>
           <form class="pure-form">
               <fieldset class="pure-group">
                 <input type="text" class="pure-input-1" placeholder="Username">
